Fix AtomicString vs. String usage in accessibility code https://bugs.webkit.org/show_bug.cgi?id=65086

Reviewed by Darin Adler.

Use AtomicString instead of String where appropriate
to avoid implicit type conversations.
Also fix a invalid reference to a temporary String.

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::setAccessibleName):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::elementsFromAttribute):
(WebCore::AccessibilityRenderObject::ariaAccessibilityDescription):
(WebCore::AccessibilityRenderObject::setAccessibleName):
* accessibility/AccessibilityRenderObject.h:


Canonical link: https://commits.webkit.org/80889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91718 268f45cc-cd09-0410-ab3c-d52691b4dbfc